# SFMLgame

./: CMakeLists.txt  save.json
content/: artifacts.json  food.json
src/: main.cpp
src/core/: Application.cpp  Application.h  GameState.cpp  GameState.h  Screen.h  ScreenManager.cpp  ScreenManager.h
src/game_logic/: Artifact.cpp  Artifact.h  Collection.cpp  Collection.h  ExcavationData.h  Food.cpp  Food.h  FoodShop.cpp  FoodShop.h  Inventory.cpp  Inventory.h  Player.cpp  Player.h  Tool.cpp  Tool.h
src/resources/: DBManager.cpp  DBManager.h  Fonts.cpp  Fonts.h
src/screens/: BankScreen.cpp  BankScreen.h  BaseScreen.cpp  BaseScreen.h  CityScreen.cpp  CityScreen.h  CollectionScreen.cpp  CollectionScreen.h  ExcavationScreen.cpp  ExcavationScreen.h  FoodShopScreen.cpp  FoodShopScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  WorkshopScreen.cpp  WorkshopScreen.h
src/ui/: Button.cpp  Button.h  Layout.h  Sidebar.cpp  Sidebar.h  UiUtils.h
